--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
 RAPIDAPI_KEY=ac777f10c4msh11c3ad8916933aap1c0e3ejsnc72b9cce31f5
+POSTGRES_URL=postgres://default:QrUzVIiSb07d@ep-holy-sun-a46i67f7-pooler.us-east-1.aws.neon.tech/verceldb?sslmode=require
+POSTGRES_USER=default
+POSTGRES_PASSWORD=QrUzVIiSb07d
+POSTGRES_DATABASE=verceldb
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
