--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ POSTGRES_DATABASE=verceldb
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1ncnVid29ybS04NS5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_5pCXIdYTuJwTDK356T5v1eqHfb0Xsq6HZwWl3WwMEs
