--- a/.env
+++ b/.env
@@ -14,3 +14,25 @@ POSTGRES_DATABASE=verceldb
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1ncnVid29ybS04NS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_5pCXIdYTuJwTDK356T5v1eqHfb0Xsq6HZwWl3WwMEs
+TRIGGER_API_KEY=tr_dev_nTKnhRh7Fk4YmnAH2Ip8
+TRIGGER_API_URL=https://api.trigger.dev
+NEXT_PUBLIC_TRIGGER_PUBLIC_API_KEY=pk_dev_X6kNr6rAIDYZ6Xc6ZG7Y
+INTERVAL_SECONDS=21600
+CRON_JOB_VERSION=0.1.0
+
+# Query Parameters
+JOB_QUERY="software engineer jobs in PLACEHOLDER usa" # placeholder will be replaced with the location (e.g. new york)
+JOB_LOCATIONS="new york,new jersey"
+JOB_TITLES="software engineer,cybersecurity engineer"
+NUM_PAGES=20
+DATE_POSTED=3days
+EMPLOYMENT_TYPES="INTERN,FULLTIME"
+JOB_REQUIREMENTS="no_experience,under_3_years_experience"
+
+#Loops
+LOOPS_API_KEY=83301fe591c5fb7306e003c481b3bcde
+
+# LogSnag
+LOGSNAG_API_KEY=bce73395befde9a9c0634908ccc43aa6
+LOGSNAG_PROJECT_ID=6618e85e4ab5fb70f2b2502f
+LOGSNAG_PROJECT_NAME="jobless-dev"
