--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@hookform/resolvers": "^3.3.4",
+    "@june-so/analytics-next": "^2.0.0",
     "@logsnag/next": "^1.0.3",
     "@prisma/client": "5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.29.0",
     "@trigger.dev/nextjs": "^2.3.18",
@@ -25,18 +30,22 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "lodash": "^4.17.21",
     "loops": "^1.0.1",
+    "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
