--- a/.github/workflows/opencommit.yml
+++ b/.github/workflows/opencommit.yml
@@ -35,5 +35,5 @@ jobs:
           OCO_OPENAI_BASE_PATH: ''
           OCO_DESCRIPTION: false
           OCO_EMOJI: false
-          OCO_MODEL: gpt-4
+          OCO_MODEL: gpt-3.5-turbo
           OCO_LANGUAGE: en
