--- a/.github/workflows/opencommit.yml
+++ b/.github/workflows/opencommit.yml
@@ -4,7 +4,7 @@ on:
   push:
     # this list of branches is often enough,
     # but you may still ignore other public branches
-    branches-ignore: [main master dev development release]
+    branches-ignore: [main]
 
 jobs:
   opencommit:
@@ -35,5 +35,5 @@ jobs:
           OCO_OPENAI_BASE_PATH: ''
           OCO_DESCRIPTION: true
           OCO_EMOJI: true
-          OCO_MODEL: gpt-3.5-turbo
+          OCO_MODEL: gpt-4-turbo
           OCO_LANGUAGE: en
