--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@segment/analytics-next": "^1.67.0",
+    "@sentry/nextjs": "^7.105.0",
     "@tanstack/react-query": "^5.29.0",
+    "@team-plain/typescript-sdk": "^3.9.0",
     "@trigger.dev/nextjs": "^2.3.18",
     "@trigger.dev/react": "^2.3.18",
     "@trigger.dev/sdk": "^2.3.18",
