--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-github-btn": "^1.4.0",
     "react-select": "^5.8.0",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
