style changes and analytics stuff

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@june-so/analytics-next": "^2.0.0",
     "@logsnag/next": "^1.0.3",
+    "@openpanel/nextjs": "^0.0.8-beta",
     "@prisma/client": "5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -42,6 +43,7 @@
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
+    "posthog-js": "^1.125.0",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
