--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ReactQueryProvider.js", "src/jobs/parse-jobs.ts", "src/app/api/employers/route.ts", "src/app/api/contact/route.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ReactQueryProvider.js", "src/jobs/parse-jobs.ts", "src/app/api/employers/route.ts", "src/app/api/contact/route.ts", "src/lib/posthog.js"],
   "exclude": ["node_modules"]
 }
