--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trigger.dev/react": "^2.3.18",
     "@trigger.dev/sdk": "^2.3.18",
     "@vercel/analytics": "^1.2.2",
+    "add": "^2.0.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -44,6 +45,7 @@
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
     "posthog-js": "^1.125.0",
+    "posthog-node": "^4.0.0",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
