--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@highlight-run/next": "^7.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@june-so/analytics-next": "^2.0.0",
     "@logsnag/next": "^1.0.3",
