--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && basehub"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
-    "@highlight-run/next": "^7.5.0",
+    "@highlight-run/next": "^7.5.1",
     "@hookform/resolvers": "^3.3.4",
     "@june-so/analytics-next": "^2.0.0",
     "@logsnag/next": "^1.0.3",
@@ -36,6 +36,7 @@
     "@vercel/analytics": "^1.2.2",
     "add": "^2.0.6",
     "axios": "^1.6.8",
+    "basehub": "^4.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -57,9 +58,11 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-gradients": "^3.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
