--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "lodash": "^4.17.21",
-    "loops": "^1.0.1",
+    "loops": "^2.0.0",
     "lucide-react": "^0.368.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
     "posthog-js": "^1.125.0",
