--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@june-so/analytics-next": "^2.0.0",
     "@logsnag/next": "^1.0.3",
     "@openpanel/nextjs": "^0.0.8-beta",
+    "@openreplay/tracker": "^12.0.10",
+    "@openreplay/tracker-assist": "^8.0.3",
     "@prisma/client": "5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
