--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.368.0",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
+    "next-plausible": "^3.12.0",
     "node-fetch": "^3.3.2",
     "posthog-js": "^1.125.0",
     "posthog-node": "^4.0.0",
