--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate && basehub"
+    "postinstall": "prisma generate && basehub && next-sitemap"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
@@ -50,6 +50,7 @@
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "next-plausible": "^3.12.0",
+    "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "posthog-js": "^1.125.0",
     "posthog-node": "^4.0.0",
